--- a/documentation/thesis/thesis_abstract.tex
+++ b/documentation/thesis/thesis_abstract.tex
@@ -19,5 +19,5 @@ and each intermediate step can be customized by the user without having
 to create everything from scratch, favoring an exchange between
 different user groups. Complete documentation, tutorials and tests
 enable users to use and adapt the Framework as quickly as possible. The
-framework for the characterisation of different magnets, which requires
+framework for the characterization of different magnets, which requires
 the integration of magnetic field sensors, was used for the evaluation.
