--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -90,6 +90,25 @@ year = {01.01.2024},
 url = {https://docs.python.org/3/library/heapq.html},
 }
 
+@misc{OpenSCAD,
+author = {Marius Kintel},
+title = {OpenSCAD - The Programmers Solid 3D CAD Modeller},
+year = {01.01.2024},
+url = {https://openscad.org},
+}
+
+
+
+@article{HallbachMagnetDesignPaper,
+author = {Peter Bluemler, Helmut Soltner},
+year = {2023},
+month = {05},
+pages = {2522},
+title = {Practical Concepts for Design, Construction and Application of Halbach Magnets in Magnetic Resonance},
+journal = {Applied Magnetic Resonance},
+doi = {10.1007/s00723-023-01602-2}
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%
 % Bücher
 %%%%%%%%%%%%%%%%%%%%%%%%
