--- a/documentation/thesis/thesis_acronyms.tex
+++ b/documentation/thesis/thesis_acronyms.tex
@@ -14,7 +14,7 @@
 \newacronym{hal}{HAL}{Hardware Abstraction Layer}
 \newacronym{pdf}{PDF}{Portable Document Format}
 \newacronym{html}{HTML}{Hypertext Markup Language}
-\newacronym{ide}{IDE}{Integrated development environment}
+\newacronym{ide}{IDE}{Integrated Development Environment}
 \newacronym{gui}{GUI}{Graphical User Interface}
 \newacronym{sbc}{SBC}{Single Board Computer}
 \newacronym{gpio}{GPIO}{General Purpose Input/Output}
@@ -22,6 +22,8 @@
 \newacronym{lut}{LUT}{Lookup Table}
 \newacronym{cdc}{CDC}{Communication Device Class}
 \newacronym{cad}{CAD}{Computer Aided Design}
+\newacronym{json}{JSON}{avaScript Object Notation}
+\newacronym{id}{ID}{Identification Number}
 
 
 
