--- a/documentation/thesis/thesis_acronyms.tex
+++ b/documentation/thesis/thesis_acronyms.tex
@@ -22,7 +22,7 @@
 \newacronym{lut}{LUT}{Lookup Table}
 \newacronym{cdc}{CDC}{Communication Device Class}
 \newacronym{cad}{CAD}{Computer Aided Design}
-\newacronym{json}{JSON}{avaScript Object Notation}
+\newacronym{json}{JSON}{JavaScript Object Notation}
 \newacronym{id}{ID}{Identification Number}
 
 
