--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -97,6 +97,16 @@ year = {01.01.2024},
 url = {https://openscad.org},
 }
 
+@article{ortner2020magpylib,
+  title={Magpylib: A free Python package for magnetic field computation},
+  author={Ortner, Michael and Bandeira, Lucas Gabriel Coliado},
+  journal={SoftwareX},
+  volume={11},
+  pages={100466},
+  year={2020},
+  publisher={Elsevier}
+}
+}
 
 
 @article{HallbachMagnetDesignPaper,
