--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -966,8 +966,8 @@ many \gls{sbc}, such as the
 \subsection{Command-Router}\label{command-router}}
 
 As it is possible to connect many identical sensors to one host using
-the \passthrough{\lstinline!network proxy!}, it must be possible to
-address them separately. This separation is done by the
+the \passthrough{\lstinline!Network-Proxy!}\ref{network-proxy}, it must
+be possible to address them separately. This separation is done by the
 \passthrough{\lstinline!MRPProxy.proxy!} module and is therefore not
 part of the core \gls{mrp} library.
 
@@ -975,20 +975,138 @@ Each connected sensor is addressed via the text-based \gls{cli} or the
 binary interface, this is initially the same for each sensor. The only
 identification feature is the sensor \gls{id}.
 
-The \passthrough{\lstinline!network proxy!} instance pretends to be a
-sensor to the \gls{mrp} host, so the multiple sensors must be combined
-into one. This is done in several steps, in the
-\passthrough{\lstinline!network proxy!} start procedure:
+The \passthrough{\lstinline!Network-Proxy!}\ref{network-proxy} instance
+pretends to be a sensor to the \gls{mrp} host, so the multiple sensors
+must be combined into one. This is done in several steps, in the
+\passthrough{\lstinline!Network-Proxy!}\ref{network-proxy} start
+procedure:
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
+\tightlist
 \item
   \textbf{Construct the Sensor ID LookUp-Table}
+\end{enumerate}
+
+Immediately after starting the
+\passthrough{\lstinline!network-proxy!}\ref{network-proxy}, the
+\gls{id}s of all locally connected sensors are read out. These are
+stored together with the instance of the
+\passthrough{\lstinline!MRPHal!} module in a \gls{lut}. This makes it
+possible to address a sensor directly using its \gls{id}.
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{1}
+\tightlist
 \item
   \textbf{Merging the sensor capabilities}
-\item
-  \textbf{Dynamic extension of the available network proxy commands}
 \end{enumerate}
+
+\begin{longtable}[]{@{}llll@{}}
+\caption{Sensor capabilities merging
+\label{Sensor_capabilities_merging.csv}}\tabularnewline
+\toprule
+SENSOR A & SENSOR B & MERGED CAPABILITIES & CAPABLE SENSORS ID
+LUT\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+SENSOR A & SENSOR B & MERGED CAPABILITIES & CAPABLE SENSORS ID
+LUT\tabularnewline
+\midrule
+\endhead
+static & & static & A\tabularnewline
+& dynamic & dynamic & B\tabularnewline
+axis\_temp & axis\_temp & axis\_temp & A B\tabularnewline
+axis\_x & axis\_x & axis\_x & A B\tabularnewline
+\bottomrule
+\end{longtable}
+
+When using sensors with different capabilites, these must be combined.
+These are used to select the appropriate measurement mode for a
+measurement. For this purpose, the \passthrough{\lstinline!info!}
+command of each sensor is queried. This information is added to the
+previously created \gls{lut}. Duplicate entries are summarized (see
+Table:\ref{Sensor_capabilities_merging.csv}) and returned to the host
+when the \passthrough{\lstinline!info!}\ref{lst:mtsc} command is
+received over network.
+
+\begin{lstlisting}[language=bash, caption={MRPproxy REST enpoiint query examples}, label=lst:mtsc]
+  # QUERY Network-Proxy capabilities
+  $ wget http://proxyinstance.local:5556/proxy/status
+  {"capabilities":[
+  "static",
+  "dynamic",
+  "axis_temp",
+  "axis_x"
+  ]}
+\end{lstlisting}
+
+The same procedure is performed for the
+\passthrough{\lstinline!commands!} \gls{cli}-command of each sensor, to
+merge to available commands of connected sensors into the \gls{lut}.
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{2}
+\tightlist
+\item
+  \textbf{Dynamic extension of the available network proxy commands} In
+  order for the host to be able to send a command to the network
+  multi-sensor setup, the command received must be forwarded to the
+  correct sensor. In addition, there are commands such as the previously
+  used \passthrough{\lstinline!info!} or
+  \passthrough{\lstinline!status!} command, which must be intercepted by
+  the \passthrough{\lstinline!MRPProxy!} module so that it can be
+  handled differently (see example \ref{lst:mtsc}).
+\end{enumerate}
+
+To realize this, a \gls{lut} was created in the previous steps, which
+contains information regarding
+\passthrough{\lstinline!requested capability!} -\textgreater{}
+\passthrough{\lstinline!sensor!}-\gls{id} -\textgreater{}
+\passthrough{\lstinline!physical sensor!} and allows the commands to be
+routed.
+
+For commands where there are several entries for
+\passthrough{\lstinline!CAPABLE SENSORS ID LUT!}\ref{Sensor_capabilities_merging.csv},
+there are two possible approaches to how the command is processed:
+
+\begin{itemize}
+\tightlist
+\item
+  redirect to each capable sensor
+\item
+  extend commands using an id parameter
+\end{itemize}
+
+These two methods have been implemented and are applied automatically.
+The decision is based on which hardware sensors are connected. In a
+setup where only the same sensor variants are connected,
+\passthrough{\lstinline!redirect to each capable sensor!} is applied.
+This offers a time advantage as fewer commands need to be sent from the
+host. Thus, with a \passthrough{\lstinline!readsensor!} command, all
+sensors are read out via one command and the summarized result is
+transmitted to the host.
+
+The \passthrough{\lstinline!extend commands using an id parameter!}
+strategy is used for different sensors. Each command is extended on the
+\passthrough{\lstinline!network-proxy!}\ref{network-proxy} by another
+\gls{id} parameter, according to the following scheme:
+
+\begin{itemize}
+\tightlist
+\item
+  \passthrough{\lstinline!readsensor <axis> <sensor number>!}-\textgreater{}
+  \passthrough{\lstinline!readsensor <axis> <ID>!}
+\item
+  \passthrough{\lstinline!opmode!}-\textgreater{}
+  \passthrough{\lstinline!opmode <ID>!}
+\end{itemize}
+
+This allows the host to address individual sensors directly via their
+specific \gls{id}.
 
 \hypertarget{examples}{%
 \section{Examples}\label{examples}}
