--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -87,40 +87,62 @@ solution.
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \item
-  \textbf{Ready to use hardware sensor designs}
+  \textbf{Ready to use hardware sensor designs} A universal,
+  easy-to-integrate Hall sensor design allows users to evaluate the
+  framework quickly and cost-effectively. The pre-built hardware sensors
+  provide an optimal solution for research, reducing development time
+  and achieving repeatable measurement results. Once successfully
+  evaluated, the Hall sensor design should be easily adaptable to other
+  sensors without the need for major firmware changes.
 \item
-  \textbf{Taking automatic measurements from sensors}
+  \textbf{Taking automatic measurements from sensors} The purpose of the
+  framework is to enable the automated acquisition of measurement data
+  from various connected hadware sensors. The user should be able to
+  configure various measurement series, which should then be carried out
+  by the framework without further user interaction.
 \item
-  \textbf{Ready to use data analysis functions}
+  \textbf{Open storage formats for data export} The use of open storage
+  formats for the export of data enables an interoperable data exchange
+  environment. The implementation of standardized formats improves the
+  portability and long-term availability of data. This encourages the
+  exchange and further processing of measurement data in other software
+  tools.
 \item
-  \textbf{Open storage formats for data export}
+  \textbf{Ready to integrate data analysis functions} Once it is
+  possible to record and store measured values, it should be possible
+  for the user to analyse and visualize this data using various
+  algorithms. The focus here should be on extending the framework with
+  user-created algorithms.
 \item
-  \textbf{Easy software configuration}
-\item
-  \textbf{User expandable data processing pipelines}
+  \textbf{User programmable data processing pipelines} User-programmable
+  data processing pipelines enable the flexible design of data
+  processing sequences by users. The framework should enable users to
+  create their own Anylse pipelines with the previously defined data
+  analysis functions.
 \end{enumerate}
 
 \hypertarget{unified-sensor}{%
 \chapter{Unified Sensor}\label{unified-sensor}}
 
-The main aim of this project is to develop a low-cost Hall sensor
-interface that is also universally expandable. The focus is on mapping
-different sensors and being compatible with different magnet types and
-shapes. This ensures broad applicability in different scenarios. Another
-goal is reproducibility to ensure consistent results. Easy communication
-with standard PC hardware maximises the user-friendliness of the
-interface. The flexibility to support different sensors and magnets
-makes the system versatile and opens up possibilities for different
-applications. A low-cost Hall sensor interface will therefore not only
-be economically attractive, but also facilitate the integration of Hall
-sensors in different contexts. In addition, the low-cost Hall sensor
-interface will serve as a development platform for the data evaluation
-\gls{mrp} library and provide real measurement data from magnets. In
-addition, the interface firmware creates a basis for the development of
-a data protocol for exchanging measured values. This makes it easy to
-integrate your own measuring devices into the \gls{mrp} ecosystem at a
-later date. This is only possible with a minimal functional hardware and
-firmware setup and was developed for this purpose first.
+A defined main objective of this project is the development of a
+cost-effective Hall sensor interface that is also universally
+expandable. The focus is on mapping different sensors and being
+compatible with different magnet types and shapes. This ensures broad
+applicability in different scenarios. Another goal is reproducibility to
+ensure consistent results. Easy communication with standard PC hardware
+maximises the user-friendliness of the interface. The flexibility to
+support different sensors and magnets makes the system versatile and
+opens up possibilities for different applications. A low-cost Hall
+sensor interface will therefore not only be economically attractive, but
+also facilitate the integration of Hall sensors in different contexts.
+In addition, the low-cost Hall sensor interface will serve as a
+development platform for the data evaluation \gls{mrp} library and
+provide real measurement data from magnets. In addition, the interface
+firmware creates a basis for the development of a data protocol for
+exchanging measured values. This makes it easy to integrate your own
+measuring devices into the \gls{mrp} ecosystem at a later date. This is
+only possible with a minimal functional hardware and firmware setup and
+was developed for this purpose first.
 
 \hypertarget{sensor-selection}{%
 \section{Sensor selection}\label{sensor-selection}}
