more thesis - first external review

--- a/documentation/thesis/thesis_acronyms.tex
+++ b/documentation/thesis/thesis_acronyms.tex
@@ -24,6 +24,7 @@
 \newacronym{cad}{CAD}{Computer Aided Design}
 \newacronym{json}{JSON}{JavaScript Object Notation}
 \newacronym{id}{ID}{Identification Number}
+\newacronym{pcb}{PCB}{Printed Circuit Board}
 
 
 
